Fix the browser context menu saving translation images when shift-right-clicking the image.

--- a/web/resources/main.scss
+++ b/web/resources/main.scss
@@ -409,6 +409,10 @@ input, textarea, [contenteditable] {
         position: absolute;
         width: 100%;
         height: 100%;
+
+        // Make sure interactions with the image only see the main image, so things like saving
+        // images only save the main image.
+        &:not(.main-image) { pointer-events: none; }
     }
 
     .inpaint-image, .low-res-preview
